<resources>
    <string name="app_name">Open Eyes</string>
    <string name="company_name">IAAI Challenge Mapping</string>
    <string name="company_email">about@openeyes.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="sign_up_form_check">I accept the term of use.</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="enter_email_hint">E-mail</string>
    <string name="exact_address">Exact address</string>
    <string name="defect_description_hint">Anything about the issue…</string>
    <string name="description">Description</string>
    <string name="pick_category">Pick an category</string>
    <string name="enter_password_hint">Password</string>
    <string name="enter_new_password_hint">New password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="confirm_new_password_hint">Confirm new password</string>
    <string name="sign_in_related">To continue your account!</string>
    <string name="sign_up_related">Register your account!</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="enter_name_hint">Full name</string>
    <string name="enter_nickname_hint">Nickname</string>
    <string name="reset_password">Reset Password</string>
    <string name="contact_us_hint_1">If there is any criticism or suggestion, contact the email below:</string>
    <string name="add_defect_hint_1">Report what you have detected in your city to share the problem with others.</string>
    <string name="vote_defect_hint_1">See the hole reported defect and also vote them in terms of importance in 4 level.</string>
    <string name="uploading">This may take a while, please be patient.</string>
    <string name="forgot_password_related">To recover your account!</string>
    <string name="forgot_password_hint_1">Please provide the email address that you used when you signed up for your account.</string>
    <string name="forgot_password_hint_2">We will send you an email that will allow you to reset your password.</string>
    <string name="send_link">Send Link</string>
    <string name="reset">Reset</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="exit_app_dialog">Do you want to exit the app?</string>
    <string name="logout_dialog">Do you want to logout?</string>
    <string name="delete_defect_dialog">Do you want to delete this defect?</string>
    <string name="reset_link_sent">The reset link has been sent to your email.</string>
    <string name="need_permission">Permission needed for this feature.</string>
    <string name="hide">HIDE</string>
    <string name="enable">Enable</string>
    <string name="hole_to_get">Hold to select location.</string>
    <string name="map">Map</string>
    <string name="defects">Defects</string>
    <string name="profile">Profile</string>
    <string name="gps_not_enable">Please enable GPS first.</string>
    <string name="error">ERROR.  </string>
    <string name="error_occurred">An error occurred. please try again later.</string>
    <string name="defect_deleted">Defect deleted successfully.</string>
    <string name="error_empty_field">This field can\'t be empty</string>
    <string name="error_category_not_accepted">Only the given categories are acceptable</string>
    <string name="error_short_password">Password must be at least 6 characters.</string>
    <string name="error_email_format">Invalid email format</string>
    <string name="error_password_not_same">The passwords are not the same.</string>
    <string name="error_accept_term">You have to accept the term of use.</string>
    <string name="error_wrong_user_info">No such user exist.</string>
    <string name="error_user_exist">User with this email already exists.</string>
    <string name="error_reset_link_not_sent">The reset link was not sent.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="my_defects">My defects</string>
    <string name="no_defect">No defects have been reported.</string>
    <string name="add_new_defect">To report your first defect, please press on add defect button below.</string>
    <string name="add_new_defect_2">To report your first defect, please press on add defect button in list view page.</string>
    <string name="my_defects_2">My Defects</string>
    <string name="contact_us">Contact us</string>
    <string name="logout_account">Logout of your account</string>
    <string name="add_defect">Add Defect</string>
    <string name="contact_us_2">Contact Us</string>
    <string name="vote_defect">View &amp; Vote Defect</string>
    <string name="vote">Vote</string>
    <string name="pick">Pick</string>
    <string name="max_image_uploaded">You can only upload up to 3 images.</string>
    <string name="get_location">Get Location</string>
    <string name="upload_photos">Upload photos</string>
    <string name="zero_time">00:00</string>
    <string name="submit_vote_error">There must be at least one star to submit a vote.</string>
    <string name="hold_to_delete">For deleting, hold on the image.</string>
    <string-array name="category">
        <item>Traffic lights</item>
        <item>Trees/Shrubs</item>
        <item>Construction site</item>
        <item>Cover/Channel</item>
        <item>Green space/Parks</item>
        <item>Public lighting</item>
        <item>Pothole/Road damage</item>
        <item>Traffic sign</item>
        <item>Pollution</item>
    </string-array>
</resources>