<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_light"
        tools:context=".view.activities.SplashActivity">

        <View
            android:id="@+id/viewSplash"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/constLayoutSplash1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="0.2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constLayoutSplash1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/constLayoutSplash2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSplash"
            app:layout_constraintVertical_weight="0.6"
            app:layout_constraintWidth_percent="0.95">

            <ImageView
                android:id="@+id/imgAppLogo"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/svg_logo"
                app:layout_constraintBottom_toTopOf="@+id/txtSplashTitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/txtSplashTitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab_black"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toTopOf="@+id/txtSplashTitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAppLogo" />

            <TextView
                android:id="@+id/txtSplashTitle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_slab_bold"
                android:gravity="center"
                android:text="@string/company_name"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSplashTitle1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constLayoutSplash2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constLayoutSplash1"
            app:layout_constraintVertical_weight="0.2"
            app:layout_constraintWidth_percent="0.95">

            <Button
                android:id="@+id/btnSplashSignUp"
                style="@style/FilledButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/sign_up"
                app:backgroundTint="@color/blue_dark"
                app:icon="@drawable/svg_sign_up"
                app:iconGravity="textStart"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnSplashSignIn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSplashSignIn"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/sign_in"
                app:icon="@drawable/svg_log_in"
                app:iconGravity="textStart"
                app:iconSize="@dimen/_20sdp"
                app:iconTint="@color/blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnSplashSignUp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/blue_dark" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>