<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_dark"
        tools:context=".view.activities.SignUpActivity">

        <View
            android:id="@+id/viewSignUp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white_light"
            app:layout_constraintBottom_toTopOf="@id/constLayoutSignUp1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="0.05" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constLayoutSignUp1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white_light"
            app:layout_constraintBottom_toTopOf="@id/constLayoutSignUp2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSignUp"
            app:layout_constraintVertical_weight="0.1">

            <TextView
                android:id="@+id/txtSignUp1"
                style="@style/form_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toTopOf="@+id/txtSignUp2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/txtSignUp2"
                style="@style/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_related"
                android:textColor="@color/gray1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSignUp1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constLayoutSignUp2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_round_bottom"
            app:layout_constraintBottom_toTopOf="@id/constLayoutSignUp3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constLayoutSignUp1"
            app:layout_constraintVertical_weight="0.75">

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayoutSignUpName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name_hint"
                        android:textColorHint="@color/blue_dark_80"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/blue_dark"
                        app:layout_constraintBottom_toTopOf="@+id/txtLayoutSignUpNickname"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintWidth_percent="0.9"
                        app:startIconDrawable="@drawable/svg_person"
                        app:startIconTint="@color/blue_dark_80">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSignUpName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_slab_light"
                            android:maxLength="20"
                            android:textColor="@color/blue_dark"
                            app:boxStrokeColor="@color/blue_semi_dark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayoutSignUpNickname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_nickname_hint"
                        android:textColorHint="@color/blue_dark_80"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/blue_dark"
                        app:layout_constraintBottom_toTopOf="@+id/txtLayoutSignUpEmail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtLayoutSignUpName"
                        app:layout_constraintWidth_percent="0.9"
                        app:startIconDrawable="@drawable/svg_person"
                        app:startIconTint="@color/blue_dark_80">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSignUpNickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_slab_light"
                            android:maxLength="15"
                            android:textColor="@color/blue_dark"
                            app:boxStrokeColor="@color/blue_semi_dark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayoutSignUpEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email_hint"
                        android:textColorHint="@color/blue_dark_80"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/blue_dark"
                        app:layout_constraintBottom_toTopOf="@+id/txtLayoutSignUpPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtLayoutSignUpNickname"
                        app:layout_constraintWidth_percent="0.9"
                        app:startIconDrawable="@drawable/svg_email"
                        app:startIconTint="@color/blue_dark_80">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSignUpEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_slab_light"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/blue_dark"
                            app:boxStrokeColor="@color/blue_semi_dark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayoutSignUpPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password_hint"
                        android:textColorHint="@color/blue_dark_80"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/blue_dark_80"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/blue_dark"
                        app:layout_constraintBottom_toTopOf="@+id/txtLayoutSignUpPasswordConfirm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtLayoutSignUpEmail"
                        app:layout_constraintWidth_percent="0.9"
                        app:startIconDrawable="@drawable/svg_lock"
                        app:startIconTint="@color/blue_dark_80">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSignUpPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_slab_light"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:textColor="@color/blue_dark"
                            app:boxStrokeColor="@color/blue_semi_dark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLayoutSignUpPasswordConfirm"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password_hint"
                        android:textColorHint="@color/blue_dark_80"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/blue_dark_80"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/blue_dark"
                        app:layout_constraintBottom_toTopOf="@+id/checkBoxSignUp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtLayoutSignUpPassword"
                        app:layout_constraintWidth_percent="0.9"
                        app:startIconDrawable="@drawable/svg_lock"
                        app:startIconTint="@color/blue_dark_80">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSignUpPasswordConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_slab_light"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:textColor="@color/blue_dark"
                            app:boxStrokeColor="@color/blue_semi_dark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkBoxSignUp"
                        style="@style/link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_form_check"
                        app:buttonTint="@color/gray1"
                        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                        app:layout_constraintEnd_toEndOf="@+id/txtLayoutSignUpPasswordConfirm"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintStart_toStartOf="@+id/txtLayoutSignUpPasswordConfirm"
                        app:layout_constraintTop_toBottomOf="@+id/txtLayoutSignUpPasswordConfirm" />

                    <Button
                        android:id="@+id/btnSignUp"
                        style="@style/FilledButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:text="@string/sign_up"
                        app:backgroundTint="@color/blue_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/txtLayoutSignUpPasswordConfirm"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/txtLayoutSignUpPasswordConfirm"
                        app:layout_constraintTop_toBottomOf="@+id/checkBoxSignUp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constLayoutSignUp3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constLayoutSignUp2"
            app:layout_constraintVertical_weight="0.1">

            <TextView
                android:id="@+id/txtSignUpToSignIn1"
                style="@style/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:gravity="center|end"
                android:text="@string/have_account"
                android:textColor="@color/white_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtSignUpToSignIn2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtSignUpToSignIn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/roboto_slab_black"
                android:text="@string/sign_in"
                android:textColor="@color/white_light"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txtSignUpToSignIn1"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBarSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/blue_semi_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>